abbozzata attuazione evento piano formativo (WIP)

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -151,6 +151,10 @@ table.datatable-responsive-search-validation thead .sorting_asc:after {
 	visibility: hidden;
 }
 
+table.datatable-responsive-eventi-attuazione thead .sorting_asc:after {
+	visibility: hidden;
+}
+
 .dropdown-header {
 	color: white;
 	font-weight: bold;
