--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -22,8 +22,9 @@
 					<div class="profile_info">
 						<span th:text="#{label.benvenuto}+','">label.benvenuto,</span>
 						<h2>
-							<span th:unless="${#authentication.principal.hasProfile('PROVIDER')}" th:text="${#authentication.principal.account.nome} + ' ' + ${#authentication.principal.account.cognome}" th:remove="tag">username</span>
-							<span th:if="${#authentication.principal.hasProfile('PROVIDER')}" th:text="'TODOProviderName'" th:remove="tag">username</span>
+							<!-- <span th:unless="${#authentication.principal.hasProfile('PROVIDER')}" th:text="${#authentication.principal.account.nome} + ' ' + ${#authentication.principal.account.cognome}" th:remove="tag">username</span>
+							<span th:if="${#authentication.principal.hasProfile('PROVIDER')}" th:text="'TODOProviderName'" th:remove="tag">username</span> -->
+							<span th:text="${#authentication.principal.account.getFullNameBase()}" th:remove="tag">username</span>
 						</h2>
 					</div>
 				</div>
@@ -35,10 +36,9 @@
 				<div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
 
 					<div class="menu_section">
-						<h3 class="profile" sec:authentication="principal.profile">
-						</h3>
+						<h3 th:if="${#authentication.principal.hasProfile('PROVIDER')}" class="profile" th:text="${'Provider - ' + #authentication.principal.account.provider.denominazioneLegale}"></h3>
+						<h3 th:unless="${#authentication.principal.hasProfile('PROVIDER')}" class="profile"></h3>
 						<ul class="nav side-menu">
-							<!-- li th:if="${#authorization.expression('hasAuthority(''PROVIDER_READ'')')}" -->
 							<li id="provider" th:if="${#authentication.principal.hasProfile('PROVIDER')}">
 								<a>
 									<i class="fa fa-home"></i> <span th:text="#{label.provider}">label.provider</span>
@@ -54,11 +54,8 @@
 									<li><a th:href="@{/provider/user/list}" th:text="#{label.utenti}">label.utenti</a></li>
 									<li><a th:href="@{/provider/pagamento/list}" th:text="#{label.pagamenti_annuali}">label.pagamenti</a></li>
 									<!--
-									<li><a href="#" th:text="#{label.eventi}">label.eventi</a></li>
 									<li><a href="#" th:text="#{label.relazione_annuale}">label.relazione_annuale</a></li>
 									<li><a href="#" th:text="#{label.contributo_annuale}">label.contributo_annuale</a></li>
-									<li><a href="#" th:text="#{label.gestione_utenti}">label.gestione_utenti</a></li>
-									<li><a th:href="@{/user/changePassword}" th:text="#{label.gestione_password}">label.gestione_password</a></li>
 									 -->
 								</ul>
 							</li>
