--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -51,7 +51,7 @@
 									<li><a th:href="@{/comunicazione/dashboard}" th:text="#{label.comunicazioni}"></a></li>
 									<li><a th:href="@{/provider/evento/list}" th:text="#{label.eventi}"></a></li>
 
-									<li><a th:href="@{/provider/user/list}" th:text="#{label.utenti}">label.utenti</a></li>
+									<li><a th:href="@{/provider/user/list}" th:text="#{label.utenti}" th:if="${#authentication.principal.hasProfile('PROVIDERUSERADMIN')}">label.utenti</a></li>
 									<li><a th:href="@{/provider/pagamento/list}" th:text="#{label.pagamenti_annuali}">label.pagamenti</a></li>
 									<!--
 									<li><a href="#" th:text="#{label.relazione_annuale}">label.relazione_annuale</a></li>
