--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -469,7 +469,6 @@
 										</label>
 										<label class="control-label col-md-3 col-sm-3 col-xs-11" for="dateIntermedie">
 											<span th:text="#{label.date_intermedie}">Data intermedie</span>
-											<span class="required">*</span>
 										</label>
 									</div>
 									<div class="date-intermedie-container" id="dateIntermedieId">
@@ -1131,7 +1130,7 @@
 											<span th:text="#{label.evento_sponsorizzato_radio}">L'Evento è sponsorizzato?</span>
 											<span class="required">*</span>
 										</label>
-										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
 											<div class="radio">
 												<label>
 													<input type="radio" class="flat sponsor" th:field="${eventoWrapper.evento.eventoSponsorizzato}" th:value="${true}" />
@@ -1146,6 +1145,9 @@
 											</div>
 										</div>
 										<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.eventoSponsorizzato')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.eventoSponsorizzato')}__}"></div>
+										<div class="col-xs-1">
+											<div th:attr="data-original-title=#{label.info_sponsor_evento}" class="btn btn-default no-margin cursor-default" data-toggle="tooltip" data-placement="top"><i class="fa fa-info-circle"></i></div>
+										</div>
 									</div>
 									<div class="sponsor-si">
 										<div class="no-padding item alert-tabella-evento form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.sponsors')} ? 'bad'">
@@ -1279,7 +1281,7 @@
 											<span th:text="#{label.si_avvale_di_partner}">L’evento si avvale di partner?</span>
 											<span class="required">*</span>
 										</label>
-										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
 											<div class="radio">
 												<label>
 													<input type="radio" class="flat partner" th:field="${eventoWrapper.evento.eventoAvvalePartner}" th:value="${true}" />
@@ -1294,6 +1296,9 @@
 											</div>
 										</div>
 										<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.eventoAvvalePartner')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.eventoAvvalePartner')}__}"></div>
+										<div class="col-xs-1">
+											<div th:attr="data-original-title=#{label.info_partner_evento}" class="btn btn-default no-margin cursor-default" data-toggle="tooltip" data-placement="top"><i class="fa fa-info-circle"></i></div>
+										</div>
 									</div>
 									<div class="no-padding partner-si item alert-tabella-evento form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.partners')} ? 'bad'">
 										<div class="col-lg-9 col-md-11 col-sm-11 col-xs-12"></div>
