cambiate label obiettivo formativo -> strategico

--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -223,7 +223,7 @@
 								<div class="col-xs-12 section-index" id="section-1" th:fragment="section-1">
 
 									<!-- TODO rimuovere -->
-									<div th:text="'MAPPA ERRORI VALIDAZIONE: '+${eventoWrapper.mappaErroriValidazione}"></div>
+<!-- 									<div th:text="'MAPPA ERRORI VALIDAZIONE: '+${eventoWrapper.mappaErroriValidazione}"></div> -->
 
 									<!-- DENOMINAZIONE LEGALE PROVIDER -->
 									<div class="item form-group">
@@ -502,7 +502,7 @@
 											<span>14</span>
 										</label>
 										<label class="control-label col-md-3 col-sm-3 col-xs-11" for="obiettivoNazionale">
-											<span th:text="#{label.obiettivo_formativo_nazionale}">Obiettivo Strategico Nazionale</span>
+											<span th:text="#{label.obiettivo_strategico_nazionale}">Obiettivo Strategico Nazionale</span>
 											<span class="required">*</span>
 										</label>
 										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
@@ -538,7 +538,7 @@
 											<span>15</span>
 										</label>
 										<label class="control-label col-md-3 col-sm-3 col-xs-11" for="obiettivorRegionale">
-											<span th:text="#{label.obiettivo_formativo_regionale}">Obiettivo Strategico Regionale</span>
+											<span th:text="#{label.obiettivo_strategico_regionale}">Obiettivo Strategico Regionale</span>
 											<span class="required">*</span>
 										</label>
 										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
