--- a/src/main/resources/templates/provider/pagamentoList.html
+++ b/src/main/resources/templates/provider/pagamentoList.html
@@ -23,7 +23,7 @@
 									<th th:text="#{label.importo}">Inserimento Eventi</th>
 									<th th:text="#{label.data_scadenza_pagamento}">Inserimento Piano Formativo</th>
 									<th th:text="#{label.stato_pagamento}">Inserimento Piano Formativo</th>
-									<th th:text="#{label.data_esecuzione}">Inserimento Piano Formativo</th>
+									<th th:text="#{label.data_pagamento}">Inserimento Piano Formativo</th>
 									<th th:text="#{label.azioni}">Inserimento Piano Formativo</th>
 								</tr>
 							</thead>
